# medicaidguard-deploy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: deploy-medicaidguard.yml
app/: __init__.py  config.py  dependencies.py  main.py  rate_limit.py  security.py
app/models/: __init__.py  request.py  response.py
app/routers/: __init__.py  health.py  metrics.py  predict.py
app/services/: __init__.py  explainer.py  metrics_store.py  model_loader.py  predictor.py  preprocessor.py  simple_model.py
demo/: .dockerignore  Dockerfile  app.py
demo/.streamlit/: config.toml  secrets.toml.example
demo/components/: __init__.py  shared_components.py  shared_theme.py
demo/sample_data/: generate_batch.py  sample_batch_100.csv
model/: feature_names.json  model.pkl  model_metadata.json
scripts/: deploy_cloudrun.sh  deploy_demo_cloudrun.sh  load_test.py  upload_model_gcs.sh
tests/: conftest.py  sample_input.json  test_explainer_loader_and_edges.py  test_explainer_model_loader_branches.py  test_health.py  test_model_loader_and_predictor.py  test_predict.py  test_preprocessor.py
