[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicaidguard-cloud-deploy"
version = "0.1.0"
description = "Cloud-deployed MedicaidGuard inference API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ahmad Whafa Azka Al Azkiyai" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "xgboost>=2.0",
  "scikit-learn>=1.4",
  "shap>=0.44",
  "google-cloud-storage>=2.14",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "prometheus-client>=0.19",
  "numpy>=1.26"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing -v"
